--- a/index.html
+++ b/index.html
@@ -6,6 +6,29 @@
   <link rel="stylesheet" href="styles/master.css">
 </head>
 <body>
-  <h1>mk</h1>
+  <header>
+    <img src="img/menu.svg" alt="иконка меню">
+    <img src="img/logo.png" alt="логотип сайта">
+    <img src="img/buy.svg" alt="иконка покупки">
+  </header>
+  <section class="intro">
+    <h1>Аленка</h1>
+    <h2>Шоколад для мечты.</h2>
+    <img src="img/product.jpg" alt="шоколад Аленка">
+    <p>Знаменитый шоколад «Алёнка»® выпускается кондитерской фабрикой «Красный Октябрь» с 1965 года. <em>Символ счастливого детства</em> нескольких поколений и по сей день остается любимым семейным лакомством. <em>9 из 10</em> потребителей называют «Алёнку» любимым шоколадом своего детства.</p>
+    <p>В настоящее время под торговой маркой «Аленка» выпускается большой ассортимент кондитерских изделий, для семейных праздников и событий, <em>с привлекательным соотношением цена/качество</em>. Локомотивом бренд-зонтика «Аленка» является молочный шоколад.</p>
+  </section>
+  <section class="perks">
+
+  </section>
+  <section class="about">
+
+  </section>
+  <section class="shop">
+
+  </section>
+  <footer>
+
+  </footer>
 </body>
 </html>
