--- a/index.html
+++ b/index.html
@@ -19,7 +19,21 @@
     <p>В настоящее время под торговой маркой «Аленка» выпускается большой ассортимент кондитерских изделий, для семейных праздников и событий, <em>с привлекательным соотношением цена/качество</em>. Локомотивом бренд-зонтика «Аленка» является молочный шоколад.</p>
   </section>
   <section class="perks">
-
+    <img src="img/choco-bar.jpg" alt="фото шоколадной плитки">
+    <ul>
+      <li>
+        <em>Классическая форма</em> Невероятно приятные прямоугольные ощущения от каждого кусочка и плитки в целом
+      </li>
+      <li>
+        <em>15 кусочков </em>Не больше и не меньше, идеальное количество для любой компании
+      </li>
+      <li>
+        <em>Завернута в фольгу</em> Приятных холодок металла и проверенное временем решение
+      </li>
+      <li>
+        <em>53,5 граммов углеводов </em>Заряд энергии для невероятных достижений
+      </li>
+    </ul>
   </section>
   <section class="about">
 
