--- a/index.html
+++ b/index.html
@@ -36,10 +36,12 @@
     </ul>
   </section>
   <section class="about">
-
+   <h2><em>Красный Октябрь</em>Проверенный временем вкус</h2>
+   <img src="img/red-october/jpg" alt="фотография здания фабрики Красного октября">
+   <p>«Красный Октябрь» — московская кондитерская фабрика на Берсеневской набережной, <em>построенная фирмой «Эйнем» в 1890-е</em> годы, после Октябрьской революции была национализирована и получила настоящее название.</p>
   </section>
   <section class="shop">
-
+    
   </section>
   <footer>
 
