--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="ru" dir="ltr">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Шоколад Аленка</title>
   <link rel="stylesheet" href="styles/master.css">
 </head>
 <body>
@@ -13,7 +14,7 @@
   </header>
   <section class="intro">
     <h1>Аленка</h1>
-    <h2>Шоколад для мечты.</h2>
+    <h2>Шоколад для&nbsp;мечты</h2>
     <img src="img/product.jpg" alt="шоколад Аленка">
     <p>Знаменитый шоколад «Алёнка»® выпускается кондитерской фабрикой «Красный Октябрь» с 1965 года. <em>Символ счастливого детства</em> нескольких поколений и по сей день остается любимым семейным лакомством. <em>9 из 10</em> потребителей называют «Алёнку» любимым шоколадом своего детства.</p>
     <p>В настоящее время под торговой маркой «Аленка» выпускается большой ассортимент кондитерских изделий, для семейных праздников и событий, <em>с привлекательным соотношением цена/качество</em>. Локомотивом бренд-зонтика «Аленка» является молочный шоколад.</p>
@@ -36,15 +37,55 @@
     </ul>
   </section>
   <section class="about">
-   <h2><em>Красный Октябрь</em>Проверенный временем вкус</h2>
-   <img src="img/red-october/jpg" alt="фотография здания фабрики Красного октября">
+   <h2>Красный Октябрь<em>Проверенный временем вкус</em></h2>
+   <img src="img/red-october.jpg" alt="фотография здания фабрики Красного октября">
    <p>«Красный Октябрь» — московская кондитерская фабрика на Берсеневской набережной, <em>построенная фирмой «Эйнем» в 1890-е</em> годы, после Октябрьской революции была национализирована и получила настоящее название.</p>
   </section>
   <section class="shop">
-    
+    <h2>Изобилие<em>Выберите свою Аленку</em></h2>
+    <div class="shop__item">
+      <img src="img/hazelnut.jpg" alt="фото школада Аленка с изюмом и фундуком">
+      <h3>Аленка с Фундуком и изюмом</h3>
+      <p>Изысканное богатое сочетание дробленых ядер лесного ореха и вязкой виноградной сладости изюма с нежным вкусом классического молочного шоколада «Алёнка», созданного по оригинальной рецептуре 60-х годов. Прекрасное дополнение к чаю, кофе, утонченное лакомство для легкого перекуса, когда хочется сладкого.</p>
+      <a href="#">Купить за 72 руб.</a>
+    </div>
+    <div class="shop__item">
+      <img src="img/almond.jpg" alt="фото школада Аленка с миндалем">
+      <h3>Алёнка с миндалем, Красный Октябрь</h3>
+      <p>Молочный шоколад «Алёнка» с отборным дробленым миндалем. Сочный и ветреный аромат миндаля переплетается с нежным молочно-шоколадным вкусом, делая его более глубоким и насыщенным. Никогда еще «Алёнка» не была такой утонченной. Более взрослый, изысканный вкус любимого с детства молочного шоколада – для повзрослевших сладкоежек.</p>
+      <a href="#">Купить за 75 руб.</a>
+    </div>
+    <div class="shop__item">
+      <img src="img/hazelnut-mega.jpg" alt="фото большой школадки Аленка с фундуком">
+      <h3>Алёнка с фундуком</h3>
+      <p>Молочный шоколад «Алёнка» с удвоенной порцией лесных орехов – для тех, кто любит похрустеть шоколадкой! 200-граммовая плитка оригинального молочного шоколада «Алёнка», щедро насыщенная кусочками дробленого фундука. Хрустящее удовольствие и отрада для тех, кому всегда мало начинки. Шоколад орехами не испортишь! А с «Алёнкой» ими можно насытиться вволю.</p>
+      <a href="#">Купить за 179 руб.</a>
+    </div>
   </section>
   <footer>
-
+    <ul>
+      <li>
+        <h3>
+          СВЯЖИТЕСЬ С НАМИ
+        </h3>
+        <a href="tel:+74951499625">8 495 149 96 25</a>
+        <p>Ежедневно с 09:00 до 21:00</p>
+      </li>
+      <li>
+        <h3>МЫ В СОЦСЕТЯХ</h3>
+        <ul>
+          <li>
+            <img src="img/facebook.svg" alt="иконка фейсбука">
+          <li>
+            <img src="img/vk.svg" alt="икона вк">
+          <li>
+            <img src="img/instagram.svg" alt="иконка инсты">
+          <li>
+            <img src="img/youtube.svg" alt="иконка ютуба">
+          </li>
+        </ul>
+      </li>
+    </ul>
   </footer>
 </body>
 </html>
