add new styles and responsive for tablet

--- a/index.html
+++ b/index.html
@@ -43,28 +43,30 @@
   </section>
   <section class="shop">
     <h2>Изобилие<em>Выберите свою Аленку</em></h2>
-    <div class="shop__item">
-      <img src="img/hazelnut.jpg" alt="фото школада Аленка с изюмом и фундуком">
-      <h3>Аленка с Фундуком и изюмом</h3>
-      <p>Изысканное богатое сочетание дробленых ядер лесного ореха и вязкой виноградной сладости изюма с нежным вкусом классического молочного шоколада «Алёнка», созданного по оригинальной рецептуре 60-х годов. Прекрасное дополнение к чаю, кофе, утонченное лакомство для легкого перекуса, когда хочется сладкого.</p>
-      <a href="#">Купить за 72 руб.</a>
-    </div>
-    <div class="shop__item">
-      <img src="img/almond.jpg" alt="фото школада Аленка с миндалем">
-      <h3>Алёнка с миндалем, Красный Октябрь</h3>
-      <p>Молочный шоколад «Алёнка» с отборным дробленым миндалем. Сочный и ветреный аромат миндаля переплетается с нежным молочно-шоколадным вкусом, делая его более глубоким и насыщенным. Никогда еще «Алёнка» не была такой утонченной. Более взрослый, изысканный вкус любимого с детства молочного шоколада – для повзрослевших сладкоежек.</p>
-      <a href="#">Купить за 75 руб.</a>
-    </div>
-    <div class="shop__item">
-      <img src="img/hazelnut-mega.jpg" alt="фото большой школадки Аленка с фундуком">
-      <h3>Алёнка с фундуком</h3>
-      <p>Молочный шоколад «Алёнка» с удвоенной порцией лесных орехов – для тех, кто любит похрустеть шоколадкой! 200-граммовая плитка оригинального молочного шоколада «Алёнка», щедро насыщенная кусочками дробленого фундука. Хрустящее удовольствие и отрада для тех, кому всегда мало начинки. Шоколад орехами не испортишь! А с «Алёнкой» ими можно насытиться вволю.</p>
-      <a href="#">Купить за 179 руб.</a>
+    <div class="shop__list">
+      <div class="shop__item">
+        <img src="img/hazelnut.jpg" alt="фото школада Аленка с изюмом и фундуком">
+        <h3>Аленка с Фундуком и изюмом</h3>
+        <p>Изысканное богатое сочетание дробленых ядер лесного ореха и вязкой виноградной сладости изюма с нежным вкусом классического молочного шоколада «Алёнка», созданного по оригинальной рецептуре 60-х годов. Прекрасное дополнение к чаю, кофе, утонченное лакомство для легкого перекуса, когда хочется сладкого.</p>
+        <a href="#">Купить за 72 руб.</a>
+      </div>
+      <div class="shop__item">
+        <img src="img/almond.jpg" alt="фото школада Аленка с миндалем">
+        <h3>Алёнка с миндалем, Красный Октябрь</h3>
+        <p>Молочный шоколад «Алёнка» с отборным дробленым миндалем. Сочный и ветреный аромат миндаля переплетается с нежным молочно-шоколадным вкусом, делая его более глубоким и насыщенным. Никогда еще «Алёнка» не была такой утонченной. Более взрослый, изысканный вкус любимого с детства молочного шоколада – для повзрослевших сладкоежек.</p>
+        <a href="#">Купить за 75 руб.</a>
+      </div>
+      <div class="shop__item">
+        <img src="img/hazelnut-mega.jpg" alt="фото большой школадки Аленка с фундуком">
+        <h3>Алёнка с фундуком</h3>
+        <p>Молочный шоколад «Алёнка» с удвоенной порцией лесных орехов – для тех, кто любит похрустеть шоколадкой! 200-граммовая плитка оригинального молочного шоколада «Алёнка», щедро насыщенная кусочками дробленого фундука. Хрустящее удовольствие и отрада для тех, кому всегда мало начинки. Шоколад орехами не испортишь! А с «Алёнкой» ими можно насытиться вволю.</p>
+        <a href="#">Купить за 179 руб.</a>
+      </div>
     </div>
   </section>
   <footer>
-    <ul>
-      <li>
+    <ul class="footer__list">
+      <li class="footer__List__item">
         <h3>
           СВЯЖИТЕСЬ С НАМИ
         </h3>
@@ -73,7 +75,7 @@
       </li>
       <li>
         <h3>МЫ В СОЦСЕТЯХ</h3>
-        <ul>
+        <ul class="footer__socials">
           <li>
             <img src="img/facebook.svg" alt="иконка фейсбука">
           <li>
