wrap social links in li

--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
         <h3>МЫ В СОЦСЕТЯХ</h3>
         <ul class="footer__socials">
           <li>
-            <img src="img/facebook.svg" alt="иконка фейсбука">
+            <a href="#">  <img src="img/facebook.svg" alt="иконка фейсбука"></a>
           <li>
-            <img src="img/vk.svg" alt="икона вк">
+            <a href="#"><img src="img/vk.svg" alt="икона вк"></a>
           <li>
-            <img src="img/instagram.svg" alt="иконка инсты">
+            <a href="#">  <img src="img/instagram.svg" alt="иконка инсты"></a>
           <li>
-            <img src="img/youtube.svg" alt="иконка ютуба">
+            <a href="#">  <img src="img/youtube.svg" alt="иконка ютуба"></a>
           </li>
         </ul>
       </li>
